--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <title>ITMD-362-02 Human-Computer Interaction and Web Design</title>
   </head>
   <body>
+    <h1>ITMD-362-02 Human-Computer Interaction and Web Design</h1>
+    <h3>Fall 2023</h3>
+    <p>Liliana Ortiz</p>
+    <p>lortiz6@hawk.iit.edu</p>
   </body>
 </html>
