adding time, place, catolog description

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <h3>Fall 2023</h3>
     <p>Liliana Ortiz</p>
     <p>lortiz6@hawk.iit.edu</p>
+    <h2>Professor:</h2>
+    <p>Daniel Krieglstein</p>
+    <h2>Lecture Days, Time, and Place:</h2>
+    <p>Tuesdays 6:25pm to 9:05pm, John T. Rettaliata Engg Center, Room 241 or online via Blackboard's Collaborate Ultra</p>
+    <h2>Course Catalog Description:</h2>
+    <p>Students in this course will learn the importance of human-computer interaction design and the effectiveness of user-centered design. The course will cover a survey of methods frequently used by the HCI profession, such as usability testing and prototyping, as well as general design principles and how to use design guidelines. A particular emphasis will be placed on usability for Web site engineering, and students will apply knowledge from the field in the design and construction of user-centered Web sites</p>
   </body>
 </html>
