--- a/index.html
+++ b/index.html
@@ -15,5 +15,16 @@
     <p>Tuesdays 6:25pm to 9:05pm, John T. Rettaliata Engg Center, Room 241 or online via Blackboard's Collaborate Ultra</p>
     <h2>Course Catalog Description:</h2>
     <p>Students in this course will learn the importance of human-computer interaction design and the effectiveness of user-centered design. The course will cover a survey of methods frequently used by the HCI profession, such as usability testing and prototyping, as well as general design principles and how to use design guidelines. A particular emphasis will be placed on usability for Web site engineering, and students will apply knowledge from the field in the design and construction of user-centered Web sites</p>
+    <h2>Course Outcomes:</h2>
+    <p>Students completing this course will learn to:</p>
+    <ul>
+      <li>Describe the diversity of information system users and tasks, and their impact on design.</li>
+      <li>Describe the core concepts, applicability, and cost benefits of user-centered design.</li>
+      <li>Demonstrate how user-centered concerns can be incorporated into system development life cycles.</li>
+      <li>Explain the need to evaluate system usability.</li>
+      <li>Describe and apply general principles of design.</li>
+      <li>Describe and execute touch-friendly, mobile-first responsive web design.</li>
+      <li>Understand and apply core theories from human-computer interaction to web design and development.</li>
+    </ul>
   </body>
 </html>
