added course objectives

--- a/index.html
+++ b/index.html
@@ -26,5 +26,17 @@
       <li>Describe and execute touch-friendly, mobile-first responsive web design.</li>
       <li>Understand and apply core theories from human-computer interaction to web design and development.</li>
     </ul>
+    <h2>Course Objectives:</h2>
+    <p>At the conclusion of this course, successful students will be able to:</p>
+    <ul>
+      <li>Recall, describe and apply principles of user-centered design</li>
+      <li>Conduct task analysis & apply the information to user-centered design.</li>
+      <li>Evaluate user interface designs with human subjects</li>
+      <li>Recall, explain, and apply the design principles of alignment, contrast, proximity, and repetition.</li>
+      <li>Design and build a user-centered website applying HCI methods and good principles of design.</li>
+      <li>Apply color and typography in web design to optimize the interface.</li>
+      <li>Engage in agile, iterative web design and development, supported by version control.</li>
+      <li>Write useful, descriptive messages attached to granular commits in a version control system.</li>
+    </ul>
   </body>
 </html>
