added media folder and image to my html page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
     <h1>ITMD-362-02 Human-Computer Interaction and Web Design</h1>
     <h3>Fall 2023</h3>
-    <p>Liliana Ortiz</p>
+    <img src="media/Liliana.jpg" alt="Liliana">
+    <P>Liliana Ortiz</P>
     <p>lortiz6@hawk.iit.edu</p>
     <h2>Professor:</h2>
     <p>Daniel Krieglstein</p>
