--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>ITMD-362-02 Human-Computer Interaction and Web Design</h1>
     <h3>Fall 2023</h3>
     <img src="media/Liliana.jpg" alt="Liliana">
-    <P>Liliana Ortiz</P>
+    <h2>Liliana Ortiz</h2>
     <p>lortiz6@hawk.iit.edu</p>
     <h2>Professor:</h2>
     <p>Daniel Krieglstein</p>
