adding about me section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <img src="media/Liliana.jpg" alt="Liliana">
     <h2>Liliana Ortiz</h2>
     <p>lortiz6@hawk.iit.edu</p>
+    <h1>About Me</h1>
+    <p>I am a 4th-year ITM student. I am currently taking 5 classes this semester, including this one. I have many hobbies, but three of the many I have are:</p>
+    <ul>
+        <li>Swimming</li>
+        <li>Playing basketball (which I haven't done in a while)</li>
+        <li>Dancing</li>
+    </ul>
     <h2>Professor:</h2>
     <p>Daniel Krieglstein</p>
     <h2>Fall 2023</h2>
