--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Liliana Ortiz</h2>
     <p>lortiz6@hawk.iit.edu</p>
     <h2>About Me</h2>
-    <p>I am a 4th-year ITM student. I am currently taking 5 classes this semester, including this one. I have many hobbies, but three of the many I have are:</p>
+    <p>I am a 4th-year ITM student. I am currently taking 5 classes this semester, including this one. I have many hobbies, but three of the those hobbies are:</p>
     <ul>
         <li>Swimming</li>
         <li>Playing basketball (which I haven't done in a while)</li>
